An attempt at some functional programming

--- a/plotter.ipynb
+++ b/plotter.ipynb
@@ -3643,7 +3643,7 @@
     "    xmin=r.time_mean - r.time_var,  # X lower error bar\n",
     "    xmax=r.time_mean + r.time_var,  # X upper error bar\n",
     "    Geom.yerrorbar, Geom.xerrorbar, Geom.point, Geom.label, # Geometries \n",
-    "    Scale.x_log, Scale.y_log)  # Setting log scales "
+    "    Scale.x_log10, Scale.y_log10)  # Setting log scales "
    ]
   }
  ],
