--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "5eb7110f",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "bin"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,12 +36,12 @@
     "\"\"\"\n",
     "Takes time series data and calculates the average of each year.\n",
     "\"\"\"\n",
-    "function bin(time_series::Vector{Float64}, solution_vector::Vector{Float64})::Vector{Float64}\n",
-    "    local binned_solution = Vector{Float64}(undef, 0);  # Setting a vector to hold the bins \n",
-    "    local whole_times = @.floor(time_series);          # Creating a vector of discrete time.\n",
-    "    for whole_time in unique(whole_times)                                           # Looping over the unique elements discrete times \n",
-    "        local indexes = findall(whole_times .== whole_time);                        # Getting the indexes of the entries \n",
-    "        append!(binned_solution, mean(solution_vector[indexes]));  # Appending to binned_solution\n",
+    "function bin(time_series::Vector, solution_vector::Vector)::Vector\n",
+    "    local binned_solution = Vector(undef, 0);   # Setting a vector to hold the bins \n",
+    "    local whole_times = @.floor(time_series);   # Creating a vector of discrete time.\n",
+    "    for whole_time in unique(whole_times)       # Looping over the unique elements discrete times \n",
+    "        local indexes = findall(whole_times .== whole_time);        # Getting the indexes\n",
+    "        push!(binned_solution, mean(solution_vector[indexes]));   # Appending to binned_solution\n",
     "    end\n",
     "    return binned_solution\n",
     "end"
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "read_hd5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "run_solver"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,8 +103,8 @@
     "\"\"\"\n",
     "Passed a solver function runs the solver and returns the speed and binned data\n",
     "\"\"\"\n",
-    "function run_solver(solver, ∇::Function, U0::Vector{Float64},\n",
-    "        p::Vector{Float64})::Vector{Float64}\n",
+    "function run_solver(solver, ∇::Function, U0::Vector,\n",
+    "        p::Vector)::Vector\n",
     "\n",
     "    local problem = ODEProblem(∇, U0, (760.0, 790.0), p);      # Creating the ODEProblem instance\n",
     "    local solution = solve(problem, reltol = 1e-6, solver); # Solving the ODE over the period of interest \n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "profile_solvers"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
       "",
       "Stacktrace:",
       " [1] top-level scope",
-      "   @ In[4]:1",
+      "   @ In[1]:1",
       " [2] eval",
       "   @ ./boot.jl:360 [inlined]",
       " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
@@ -232,20 +232,24 @@
     "u0 = TO \\ (- params[1] * P);  # Equilibriating the system\n",
     "\n",
     "burnproblem = ODEProblem(derivative, u0, (-360.0, 760.0), params); # Burn in problem  \n",
-    "burnsolution = solve(burnproblem, reltol=1e-6).u[end];             # Running the model and returning final position\n",
+    "burnsolution = solve(burnproblem, reltol=1e-6).u[end];             # Running model \n",
     "\n",
     "\"\"\"\n",
     "Calculates the gradient using a χ² loss function. \n",
     "\"\"\"\n",
-    "function profile_gradients(parameters::Vector{Float64})  \n",
-    "    local solution = run_solver(BS3, ∇, u0, parameters);                    #! Inconsistent naming\n",
-    "    local ΔC14 = (solution .- steady_state[2]) ./ steady_state[2] .* 1000;  # Calculating ΔC14\n",
-    "    local miyake = DataFrame(CSV.File(\"Miyake12.csv\"));                     # Reading Miyake data\n",
-    "    local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
-    "    return -0.5 * χ²\n",
+    "function select_gradient_solver(parameters, solver)\n",
+    "    local solution = run_solver(solver(), derivative, burnsolution, parameters); #! Inconsistent naming\n",
+    "    function profile_gradients(parameters)  \n",
+    "        local ΔC14 = (solution .- u0[2]) ./ u0[2] .* 1000;  # Calculating ΔC14\n",
+    "        local miyake = DataFrame(CSV.File(\"Miyake12.csv\"));                     # Reading Miyake data\n",
+    "        local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
+    "        return -0.5 * χ²\n",
+    "    end\n",
+    "    return profile_gradients\n",
     "end\n",
     "\n",
-    "ForwardDiff.gradient(profile_gradients, params); # Running the forward diff\n"
+    "something = ForwardDiff.gradient(profile_gradients, params); # Running the forward diff\n",
+    "println(something)\n"
    ]
   },
   {
