Working implementation of the profile gradients returning erroneous output

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5eb7110f",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "bin"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "read_hd5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "run_solver"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "profile_solvers"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
    "source": [
     "So basically I need to have a program that takes the parameters of the production function as an input and which can then be differntiated with respect to those parameters. In the middle of this the solver runs but I do not need to pass the autodiff through the solver. My problem is that variables are in the wrong scope. I need to have them inside the function but do not want to pass them as variables. \n",
     "\n",
-    "I am not sure why the solver needs to be included within the scope of the `profile_gradients` function."
+    "So I need to test that my $\\Delta C14$ calculations are correct."
    ]
   },
   {
@@ -192,22 +192,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "UndefVarError: read_hd5 not defined",
+     "evalue": "MethodError: no method matching +(::Vector{Float64}, ::Float64)\nFor element-wise addition, use broadcasting with dot syntax: array .+ scalar\n\u001b[0mClosest candidates are:\n\u001b[0m  +(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:560\n\u001b[0m  +(\u001b[91m::Union{VectorizationBase.AbstractMask{W, U} where U<:Union{UInt128, UInt16, UInt32, UInt64, UInt8}, VectorizationBase.VecUnroll{var\"#s3\", W, SIMDTypes.Bit, var\"#s2\"} where {var\"#s3\", var\"#s2\"<:(VectorizationBase.AbstractMask{W, U} where U<:Union{UInt128, UInt16, UInt32, UInt64, UInt8})}} where W\u001b[39m, ::Union{Bool, Float16, Float32, Float64, Int16, Int32, Int64, Int8, UInt16, UInt32, UInt64, UInt8, SIMDTypes.Bit}) at /home/jordan/.julia/packages/VectorizationBase/xHOp9/src/base_defs.jl:285\n\u001b[0m  +(\u001b[91m::Union{InitialValues.NonspecificInitialValue, InitialValues.SpecificInitialValue{typeof(+)}}\u001b[39m, ::Any) at /home/jordan/.julia/packages/InitialValues/P5PLf/src/InitialValues.jl:153\n\u001b[0m  ...",
      "output_type": "error",
      "traceback": [
-      "UndefVarError: read_hd5 not defined",
+      "MethodError: no method matching +(::Vector{Float64}, ::Float64)\nFor element-wise addition, use broadcasting with dot syntax: array .+ scalar\n\u001b[0mClosest candidates are:\n\u001b[0m  +(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:560\n\u001b[0m  +(\u001b[91m::Union{VectorizationBase.AbstractMask{W, U} where U<:Union{UInt128, UInt16, UInt32, UInt64, UInt8}, VectorizationBase.VecUnroll{var\"#s3\", W, SIMDTypes.Bit, var\"#s2\"} where {var\"#s3\", var\"#s2\"<:(VectorizationBase.AbstractMask{W, U} where U<:Union{UInt128, UInt16, UInt32, UInt64, UInt8})}} where W\u001b[39m, ::Union{Bool, Float16, Float32, Float64, Int16, Int32, Int64, Int8, UInt16, UInt32, UInt64, UInt8, SIMDTypes.Bit}) at /home/jordan/.julia/packages/VectorizationBase/xHOp9/src/base_defs.jl:285\n\u001b[0m  +(\u001b[91m::Union{InitialValues.NonspecificInitialValue, InitialValues.SpecificInitialValue{typeof(+)}}\u001b[39m, ::Any) at /home/jordan/.julia/packages/InitialValues/P5PLf/src/InitialValues.jl:153\n\u001b[0m  ...",
       "",
       "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[1]:1",
-      " [2] eval",
+      " [1] (::var\"#profile_gradients#7\"{Vector{Any}})(params::Vector{ForwardDiff.Dual{ForwardDiff.Tag{var\"#profile_gradients#7\"{Vector{Any}}, Float64}, Float64, 6}})",
+      "   @ Main ./In[9]:30",
+      " [2] vector_mode_dual_eval!",
+      "   @ ~/.julia/packages/ForwardDiff/tZ5o1/src/apiutils.jl:37 [inlined]",
+      " [3] vector_mode_gradient(f::var\"#profile_gradients#7\"{Vector{Any}}, x::Vector{Float64}, cfg::ForwardDiff.GradientConfig{ForwardDiff.Tag{var\"#profile_gradients#7\"{Vector{Any}}, Float64}, Float64, 6, Vector{ForwardDiff.Dual{ForwardDiff.Tag{var\"#profile_gradients#7\"{Vector{Any}}, Float64}, Float64, 6}}})",
+      "   @ ForwardDiff ~/.julia/packages/ForwardDiff/tZ5o1/src/gradient.jl:106",
+      " [4] gradient(f::Function, x::Vector{Float64}, cfg::ForwardDiff.GradientConfig{ForwardDiff.Tag{var\"#profile_gradients#7\"{Vector{Any}}, Float64}, Float64, 6, Vector{ForwardDiff.Dual{ForwardDiff.Tag{var\"#profile_gradients#7\"{Vector{Any}}, Float64}, Float64, 6}}}, ::Val{true})",
+      "   @ ForwardDiff ~/.julia/packages/ForwardDiff/tZ5o1/src/gradient.jl:19",
+      " [5] gradient(f::Function, x::Vector{Float64}, cfg::ForwardDiff.GradientConfig{ForwardDiff.Tag{var\"#profile_gradients#7\"{Vector{Any}}, Float64}, Float64, 6, Vector{ForwardDiff.Dual{ForwardDiff.Tag{var\"#profile_gradients#7\"{Vector{Any}}, Float64}, Float64, 6}}}) (repeats 2 times)",
+      "   @ ForwardDiff ~/.julia/packages/ForwardDiff/tZ5o1/src/gradient.jl:17",
+      " [6] top-level scope",
+      "   @ In[9]:37",
+      " [7] eval",
       "   @ ./boot.jl:360 [inlined]",
-      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      " [8] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
       "   @ Base ./loading.jl:1116"
      ]
     }
@@ -239,16 +249,17 @@
     "\"\"\"\n",
     "function select_gradient_solver(parameters, solver)\n",
     "    local solution = run_solver(solver(), derivative, burnsolution, parameters); #! Inconsistent naming\n",
-    "    function profile_gradients(parameters)  \n",
+    "    function profile_gradients(params)  \n",
     "        local ΔC14 = (solution .- u0[2]) ./ u0[2] .* 1000;  # Calculating ΔC14\n",
-    "        local miyake = DataFrame(CSV.File(\"Miyake12.csv\"));                     # Reading Miyake data\n",
+    "        local miyake = DataFrame(CSV.File(\"Miyake12.csv\")); # Reading Miyake data\n",
+    "        local ΔC14 .+= mean(miyake.d14c[1:4]);  # Calculates the ticktack offset\n",
     "        local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
     "        return -0.5 * χ²\n",
     "    end\n",
     "    return profile_gradients\n",
     "end\n",
     "\n",
-    "something = ForwardDiff.gradient(profile_gradients, params); # Running the forward diff\n",
+    "something = ForwardDiff.gradient(select_gradient_solver(params, BS3), params); # Running the forward diff\n",
     "println(something)\n"
    ]
   },
