Working gradient profile function.

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -169,15 +169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "select_gradient_solver"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Calculates the gradient using a χ² loss function. \n",
     "\"\"\"\n",
     "function select_gradient_solver(solver, ∇::Function, u0::Vector{Float64})\n",
-    "    function profile_gradients(parameters)  \n",
+    "    function loss_function(parameters)  \n",
     "        local solution = run_solver(solver(), ∇, u0, parameters); #! Naming\n",
     "        local ΔC14 = (solution .- u0[2]) ./ u0[2] .* 1000;  # Calculating ΔC14\n",
     "        local miyake = DataFrame(CSV.File(\"Miyake12.csv\")); # Reading Miyake data\n",
@@ -185,24 +196,23 @@
     "        local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
     "        return -0.5 * χ²\n",
     "    end\n",
-    "    return profile_gradients\n",
+    "    return loss_function\n",
     "end"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So basically I need to have a program that takes the parameters of the production function as an input and which can then be differntiated with respect to those parameters. In the middle of this the solver runs but I do not need to pass the autodiff through the solver. My problem is that variables are in the wrong scope. I need to have them inside the function but do not want to pass them as variables. \n",
-    "\n",
-    "So I need to test that my $\\Delta C14$ calculations are correct."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.859478950500488\n"
+     ]
+    }
+   ],
    "source": [
     "TO, P = read_hd5(\"Guttler14.hd5\");      # Reading the data into the scope \n",
     "\n",
@@ -223,34 +233,104 @@
     "u0 = TO \\ (- params[1] * P);  # Equilibriating the system\n",
     "\n",
     "burnproblem = ODEProblem(derivative, u0, (-360.0, 760.0), params);  # Burn in problem  \n",
-    "burnsolution = solve(burnproblem, reltol=1e-6).u[end];              # Running model \n",
+    "burnsolution = solve(burnproblem, reltol=1e-6).u[end];              # Running model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "profile_forward_gradients (generic function with 2 methods)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function profile_forward_gradients(solvers, ∇::Function, u0::Vector{Float64}, params::Vector)\n",
+    "    local results = DataFrame(solvers = @.string(solvers));     # Net results\n",
+    "    local time_mean = Vector{Float64}(undef, length(solvers));  # Storage for speeds\n",
+    "    local time_var = Vector{Float64}(undef, length(solvers));   # Storing speed varience\n",
+    "    local gradient_matrix = Matrix{Float64}(undef, length(solvers), length(params)); # Storing gradients\n",
+    "    for (index, solver) in solvers\n",
+    "        local time_sample = Vector{Float64}(undef, 10);   # Storing the time sample\n",
+    "        for i in 1:10\n",
+    "            local timer = time();   # Creating a time\n",
+    "            local loss = select_gradient_solver(solver, ∇, u0); # Preparing the function\n",
+    "            local gradient = ForwardDiff.gradient(loss, params);    # Calculating the parameter gradient\n",
+    "            time_sample[i] = time() - timer;    # Appending the time to the time vector\n",
+    "            if i == 10  # Storing the gradient of the final run\n",
+    "                gradient_matrix[index, 1:end] = gradient;   # Appending the final gradient \n",
+    "            end\n",
+    "        end\n",
+    "        time_mean[index] = mean(time_sample);   # Calculating and storing the mean\n",
+    "        time_var[index] = var(time_sample);     # Calculating and storing the varience\n",
+    "    end\n",
+    "    gradient_matrix = (gradient_matrix .- median(gradient_matrix, dims=2)')';   # Deviations \n",
+    "    gradient_matrix = abs(gradient_matrix); # Absolute deviations\n",
     "\n",
-    "ForwardDiff.gradient(select_gradient_solver(BS3, derivative, burnsolution), params); # Running forward diff\n",
-    "\n"
+    "    results.time_means = time_mean; # Storing the time means \n",
+    "    results.time_vars = time_var;   # Storing the errors\n",
+    "    results.accuracy = vec(mean(gradient_matrix, dims=1));      # Accuracy as a mean of the deviations \n",
+    "    results.accuracy_var = vec(var(gradient_matrix, dims=1));   # Accuracy error\n",
+    "    \n",
+    "    return results\n",
+    "end\n",
+    "\n",
+    "# It would be dope to construct this framework only once and then be able to hand it only the two lines that are different. I think there must be a way to do this using macros"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Profiling the solvers by running each solver over the 30 year period surrounding the Miyake event. Saving the data to a file upon completion. "
+    "Profiling the solvers by running each solver over the 30 year period surrounding the Miyake event. Saving the data to a file upon completion. \n",
+    "\n",
+    "I need to look into `BS5` as well as combinations like `AutoTsit5(Rosenbrook23)`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "MethodError: no method matching iterate(::Type{TRBDF2})\n\u001b[0mClosest candidates are:\n\u001b[0m  iterate(\u001b[91m::Union{LinRange, StepRangeLen}\u001b[39m) at range.jl:664\n\u001b[0m  iterate(\u001b[91m::Union{LinRange, StepRangeLen}\u001b[39m, \u001b[91m::Int64\u001b[39m) at range.jl:664\n\u001b[0m  iterate(\u001b[91m::T\u001b[39m) where T<:Union{Base.KeySet{var\"#s77\", var\"#s76\"} where {var\"#s77\", var\"#s76\"<:Dict}, Base.ValueIterator{var\"#s75\"} where var\"#s75\"<:Dict} at dict.jl:693\n\u001b[0m  ...",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching iterate(::Type{TRBDF2})\n\u001b[0mClosest candidates are:\n\u001b[0m  iterate(\u001b[91m::Union{LinRange, StepRangeLen}\u001b[39m) at range.jl:664\n\u001b[0m  iterate(\u001b[91m::Union{LinRange, StepRangeLen}\u001b[39m, \u001b[91m::Int64\u001b[39m) at range.jl:664\n\u001b[0m  iterate(\u001b[91m::T\u001b[39m) where T<:Union{Base.KeySet{var\"#s77\", var\"#s76\"} where {var\"#s77\", var\"#s76\"<:Dict}, Base.ValueIterator{var\"#s75\"} where var\"#s75\"<:Dict} at dict.jl:693\n\u001b[0m  ...",
+      "",
+      "Stacktrace:",
+      " [1] indexed_iterate(I::Type, i::Int64)",
+      "   @ Base ./tuple.jl:89",
+      " [2] profile_forward_gradients(solvers::Vector{Type}, ∇::Function, u0::Vector{Float64}, params::Vector{Float64})",
+      "   @ Main ./In[71]:6",
+      " [3] top-level scope",
+      "   @ In[72]:4",
+      " [4] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [5] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1116"
+     ]
+    }
+   ],
    "source": [
     "solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23,\n",
     "    ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,\n",
     "    TanYam7, Vern6];\n",
-    "profiles = profile_solvers(solvers, derivative, burnsolution, params); # Running the solvers \n",
+    "profiles = profile_forward_gradients(solvers, derivative, burnsolution, params); # Running the solvers \n",
     "\n",
     "if isfile(\"solver_profiles.csv\");                           # Checking for the .csv file \n",
-    "    CSV.write(\"solver_profiles.csv\", profiles, append=true);# Adding new solvers to the CSV\n",
+    "    CSV.write(\"gradient_profiles.csv\", profiles, append=true);# Adding new solvers to the CSV\n",
     "else \n",
-    "    CSV.write(\"solver_profiles.csv\", profiles, append=false);# Creating the file if it does not exist \n",
+    "    CSV.write(\"gradient_profiles.csv\", profiles, append=false);# Creating the file if it does not exist \n",
     "end"
    ]
   }
