Working forward mode auto diff profile

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "profile_forward_gradients (generic function with 2 methods)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
     "    local time_mean = Vector{Float64}(undef, length(solvers));  # Storage for speeds\n",
     "    local time_var = Vector{Float64}(undef, length(solvers));   # Storing speed varience\n",
     "    local gradient_matrix = Matrix{Float64}(undef, length(solvers), length(params)); # Storing gradients\n",
-    "    for (index, solver) in solvers\n",
+    "    for (index, solver) in enumerate(solvers)\n",
     "        local time_sample = Vector{Float64}(undef, 10);   # Storing the time sample\n",
     "        for i in 1:10\n",
     "            local timer = time();   # Creating a time\n",
@@ -269,16 +269,16 @@
     "                gradient_matrix[index, 1:end] = gradient;   # Appending the final gradient \n",
     "            end\n",
     "        end\n",
-    "        time_mean[index] = mean(time_sample);   # Calculating and storing the mean\n",
-    "        time_var[index] = var(time_sample);     # Calculating and storing the varience\n",
+    "        time_mean[index] = mean(time_sample[2:end]);   # Calculating and storing the mean\n",
+    "        time_var[index] = var(time_sample[2:end]);     # Calculating and storing the varience\n",
     "    end\n",
-    "    gradient_matrix = (gradient_matrix .- median(gradient_matrix, dims=2)')';   # Deviations \n",
-    "    gradient_matrix = abs(gradient_matrix); # Absolute deviations\n",
+    "    gradient_matrix = (gradient_matrix' .- median(gradient_matrix, dims=1)')';   # Deviations \n",
+    "    gradient_matrix = @.abs(gradient_matrix); # Absolute deviations\n",
     "\n",
     "    results.time_means = time_mean; # Storing the time means \n",
     "    results.time_vars = time_var;   # Storing the errors\n",
-    "    results.accuracy = vec(mean(gradient_matrix, dims=1));      # Accuracy as a mean of the deviations \n",
-    "    results.accuracy_var = vec(var(gradient_matrix, dims=1));   # Accuracy error\n",
+    "    results.accuracy = vec(mean(gradient_matrix, dims=2));      # Accuracy as a mean of the deviations \n",
+    "    results.accuracy_var = vec(var(gradient_matrix, dims=2));   # Accuracy error\n",
     "    \n",
     "    return results\n",
     "end\n",
@@ -292,33 +292,25 @@
    "source": [
     "Profiling the solvers by running each solver over the 30 year period surrounding the Miyake event. Saving the data to a file upon completion. \n",
     "\n",
-    "I need to look into `BS5` as well as combinations like `AutoTsit5(Rosenbrook23)`"
+    "I need to look into `BS5` as well as combinations like `AutoTsit5(Rosenbrook23)`. It may also be more efficient to have a function called write to CSV or something like that since I will be reusing the code in both places. I might just amalglomate the gradient and solver profiling into a single function although it would be much more elegant to have it as a macro or as a function programming element, where I passed a function kernel and retrieved the correct profiling function as the return output.\n",
+    "\n",
+    "To consolidate my plan. I am going to write a function that returns the correct function code as an output for the profiler allowing me to severely reduce the amount of code that I have. This will be good at the loss of readibility and generality. I don't need either of those things in large amounts so we are good. I will also move the plotting function into this notebook and make it a function so that. I can visualise my results here. Finally, I will make a write CSV file function that will have mutliple modes, for when I want to append additional solvers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching iterate(::Type{TRBDF2})\n\u001b[0mClosest candidates are:\n\u001b[0m  iterate(\u001b[91m::Union{LinRange, StepRangeLen}\u001b[39m) at range.jl:664\n\u001b[0m  iterate(\u001b[91m::Union{LinRange, StepRangeLen}\u001b[39m, \u001b[91m::Int64\u001b[39m) at range.jl:664\n\u001b[0m  iterate(\u001b[91m::T\u001b[39m) where T<:Union{Base.KeySet{var\"#s77\", var\"#s76\"} where {var\"#s77\", var\"#s76\"<:Dict}, Base.ValueIterator{var\"#s75\"} where var\"#s75\"<:Dict} at dict.jl:693\n\u001b[0m  ...",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching iterate(::Type{TRBDF2})\n\u001b[0mClosest candidates are:\n\u001b[0m  iterate(\u001b[91m::Union{LinRange, StepRangeLen}\u001b[39m) at range.jl:664\n\u001b[0m  iterate(\u001b[91m::Union{LinRange, StepRangeLen}\u001b[39m, \u001b[91m::Int64\u001b[39m) at range.jl:664\n\u001b[0m  iterate(\u001b[91m::T\u001b[39m) where T<:Union{Base.KeySet{var\"#s77\", var\"#s76\"} where {var\"#s77\", var\"#s76\"<:Dict}, Base.ValueIterator{var\"#s75\"} where var\"#s75\"<:Dict} at dict.jl:693\n\u001b[0m  ...",
-      "",
-      "Stacktrace:",
-      " [1] indexed_iterate(I::Type, i::Int64)",
-      "   @ Base ./tuple.jl:89",
-      " [2] profile_forward_gradients(solvers::Vector{Type}, ∇::Function, u0::Vector{Float64}, params::Vector{Float64})",
-      "   @ Main ./In[71]:6",
-      " [3] top-level scope",
-      "   @ In[72]:4",
-      " [4] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [5] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1116"
-     ]
+     "data": {
+      "text/plain": [
+       "\"gradient_profiles.csv\""
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -327,11 +319,22 @@
     "    TanYam7, Vern6];\n",
     "profiles = profile_forward_gradients(solvers, derivative, burnsolution, params); # Running the solvers \n",
     "\n",
-    "if isfile(\"solver_profiles.csv\");                           # Checking for the .csv file \n",
+    "if isfile(\"gradient_profiles.csv\");                           # Checking for the .csv file \n",
     "    CSV.write(\"gradient_profiles.csv\", profiles, append=true);# Adding new solvers to the CSV\n",
     "else \n",
     "    CSV.write(\"gradient_profiles.csv\", profiles, append=false);# Creating the file if it does not exist \n",
-    "end"
+    "end\n",
+    "\n",
+    "#! parameters has length 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function write_csv()"
    ]
   }
  ],
