Adding a write csv function

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -317,15 +317,7 @@
     "solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23,\n",
     "    ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,\n",
     "    TanYam7, Vern6];\n",
-    "profiles = profile_forward_gradients(solvers, derivative, burnsolution, params); # Running the solvers \n",
-    "\n",
-    "if isfile(\"gradient_profiles.csv\");                           # Checking for the .csv file \n",
-    "    CSV.write(\"gradient_profiles.csv\", profiles, append=true);# Adding new solvers to the CSV\n",
-    "else \n",
-    "    CSV.write(\"gradient_profiles.csv\", profiles, append=false);# Creating the file if it does not exist \n",
-    "end\n",
-    "\n",
-    "#! parameters has length 6"
+    "profiles = profile_forward_gradients(solvers, derivative, burnsolution, params); # Running the solvers "
    ]
   },
   {
@@ -334,7 +326,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function write_csv()"
+    "\"\"\"\n",
+    "Writes the results to a CSV file. If mode is set to append then the results are added to an existing CSV file without checking. Else the file is created with `append=false`.\n",
+    "\"\"\"\n",
+    "function write_csv(mode::String, data::DataFrame)::Nothing\n",
+    "    if mode == \"append\";                           # Checking for the .csv file \n",
+    "        CSV.write(\"gradient_profiles.csv\", profiles, append=true);# Adding new solvers to the CSV\n",
+    "    else \n",
+    "        CSV.write(\"gradient_profiles.csv\", profiles, append=false);# Creating the file if it does not exist \n",
+    "    end\n",
+    "end"
    ]
   }
  ],
