Cleaning directory and finalising some features

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -299,6 +299,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Writes the results to a CSV file. If mode is set to append then the results are added to an existing CSV file without checking. Else the file is created with `append=false`.\n",
+    "\"\"\"\n",
+    "function write_csv(mode::String, data::DataFrame)::Nothing\n",
+    "    if mode == \"append\";                           # Checking for the .csv file \n",
+    "        CSV.write(\"gradient_profiles.csv\", profiles, append=true);# Adding new solvers to the CSV\n",
+    "    else \n",
+    "        CSV.write(\"gradient_profiles.csv\", profiles, append=false);# Creating the file if it does not exist \n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "This function constructs a plot of the input data assuming that it has the fields created by the more generalised \n",
+    "\"\"\"\n",
+    "function speed_vs_accuracy_plot(filename::String)\n",
+    "    local r = DataFrame(CSV.File(filename));    # Reading data into the workspace\n",
+    "    local datavisual = Gadfly.plot(# Plot object for manipultation \n",
+    "        y=r.accuracy, x=r.time_means, label=r.solvers,    # Raw data \n",
+    "        Guide.ylabel(\"Accuracy\"), Guide.xlabel(\"Time\"), # X, Y Labels  \n",
+    "        ymin=r.accuracy - r.accuracy_var,   # Y lower error bar\n",
+    "        ymax=r.accuracy + r.accuracy_var,   # Y upper error bar\n",
+    "        xmin=r.time_means - r.time_vars,  # X lower error bar\n",
+    "        xmax=r.time_means + r.time_vars,  # X upper error bar\n",
+    "        Geom.yerrorbar, Geom.xerrorbar, Geom.point, Geom.label, # Geometries \n",
+    "        Scale.x_log10, Scale.y_log10)  # Setting log scales \n",
+    "    return datavisual\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
    "outputs": [
@@ -317,25 +359,11 @@
     "solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23,\n",
     "    ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,\n",
     "    TanYam7, Vern6];\n",
-    "profiles = profile_forward_gradients(solvers, derivative, burnsolution, params); # Running the solvers "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Writes the results to a CSV file. If mode is set to append then the results are added to an existing CSV file without checking. Else the file is created with `append=false`.\n",
-    "\"\"\"\n",
-    "function write_csv(mode::String, data::DataFrame)::Nothing\n",
-    "    if mode == \"append\";                           # Checking for the .csv file \n",
-    "        CSV.write(\"gradient_profiles.csv\", profiles, append=true);# Adding new solvers to the CSV\n",
-    "    else \n",
-    "        CSV.write(\"gradient_profiles.csv\", profiles, append=false);# Creating the file if it does not exist \n",
-    "    end\n",
-    "end"
+    "profiles = profile_forward_gradients(solvers, derivative, burnsolution, params); # Running the solvers \n",
+    "\n",
+    "write_csv(profiles);    # Writing the data to a CSV\n",
+    "saplot = speed_vs_accuracy_plot(\"gradient_profiles.csv\"); # constructing the plot object\n",
+    "display(saplot)"
    ]
   }
  ],
