--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 93,
    "id": "5eb7110f",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "bin"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "read_hd5"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "run_solver"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "profile_solvers"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,12 +164,12 @@
     "    results.time_mean = t_mean;                     # Storing the mean run time\n",
     "    results.time_var = t_var;                       # Storing the varience of the time sample \n",
     "    return results\n",
-    "end\n"
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "select_gradient_solver"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,43 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.859478950500488\n"
-     ]
-    }
-   ],
-   "source": [
-    "TO, P = read_hd5(\"Guttler14.hd5\");      # Reading the data into the scope \n",
-    "\n",
-    "params = Vector{Float64}(undef, 6); # Storing the model params \n",
-    "params[1] = 7.044873503263437;      # The mean position of the sinusoid \n",
-    "params[2] = 0.18;                   # The modulation of the sinusoid w. r. t the mean\n",
-    "params[3] = 11.0;                   # Setting period of the sinusoid \n",
-    "params[4] = 1.25;                   # The phase shift of the sinusoid\n",
-    "params[5] = 120.05769867244142;     # The height of the super gaussian \n",
-    "params[6] = 12.0;                   # Width of the super-gaussian \n",
-    "\n",
-    "# The parameters to the model must be incorrect\n",
-    "production(t, params) = params[1] * (1 + params[2] * \n",
-    "    sin(2 * π / params[3] * t + params[4])) +           # Sinusoidal production \n",
-    "    params[5] * exp(- (params[6] * (t - 775)) ^ 16);    # Super Gaussian event\n",
-    "derivative(x, params, t) = vec(TO * x + production(t, params) * P);  # The derivative of the system \n",
-    "\n",
-    "u0 = TO \\ (- params[1] * P);  # Equilibriating the system\n",
-    "\n",
-    "burnproblem = ODEProblem(derivative, u0, (-360.0, 760.0), params);  # Burn in problem  \n",
-    "burnsolution = solve(burnproblem, reltol=1e-6).u[end];              # Running model "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +211,7 @@
        "profile_forward_gradients (generic function with 2 methods)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,14 +263,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "write_csv"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Writes the results to a CSV file. If mode is set to append then the results are added to an existing CSV file without checking. Else the file is created with `append=false`.\n",
     "\"\"\"\n",
-    "function write_csv(mode::String, data::DataFrame)::Nothing\n",
+    "function write_csv(mode::String, data::DataFrame)\n",
     "    if mode == \"append\";                           # Checking for the .csv file \n",
     "        CSV.write(\"gradient_profiles.csv\", profiles, append=true);# Adding new solvers to the CSV\n",
     "    else \n",
@@ -317,9 +292,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "speed_vs_accuracy_plot"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "This function constructs a plot of the input data assuming that it has the fields created by the more generalised \n",
@@ -341,29 +327,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"gradient_profiles.csv\""
+       "Plot(...)"
       ]
      },
-     "execution_count": 81,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23,\n",
-    "    ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,\n",
-    "    TanYam7, Vern6];\n",
-    "profiles = profile_forward_gradients(solvers, derivative, burnsolution, params); # Running the solvers \n",
+    "function main()\n",
+    "    TO, P = read_hd5(\"Guttler14.hd5\");      # Reading the data into the scope \n",
     "\n",
-    "write_csv(profiles);    # Writing the data to a CSV\n",
-    "saplot = speed_vs_accuracy_plot(\"gradient_profiles.csv\"); # constructing the plot object\n",
-    "display(saplot)"
+    "    params = Vector{Float64}(undef, 6); # Storing the model params \n",
+    "    params[1] = 7.044873503263437;      # The mean position of the sinusoid \n",
+    "    params[2] = 0.18;                   # The modulation of the sinusoid w. r. t the mean\n",
+    "    params[3] = 11.0;                   # Setting period of the sinusoid \n",
+    "    params[4] = 1.25;                   # The phase shift of the sinusoid\n",
+    "    params[5] = 120.05769867244142;     # The height of the super gaussian \n",
+    "    params[6] = 12.0;                   # Width of the super-gaussian \n",
+    "\n",
+    "    # The parameters to the model must be incorrect\n",
+    "    production(t, params) = params[1] * (1 + params[2] * \n",
+    "        sin(2 * π / params[3] * t + params[4])) +           # Sinusoidal production \n",
+    "        params[5] * exp(- (params[6] * (t - 775)) ^ 16);    # Super Gaussian event\n",
+    "    derivative(x, params, t) = vec(TO * x + production(t, params) * P);  # The derivative of the system \n",
+    "\n",
+    "    u0 = TO \\ (- params[1] * P);  # Equilibriating the system\n",
+    "\n",
+    "    burnproblem = ODEProblem(derivative, u0, (-360.0, 760.0), params);  # Burn in problem  \n",
+    "    burnsolution = solve(burnproblem, reltol=1e-6).u[end];              # Running model \n",
+    "\n",
+    "    solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23,\n",
+    "        ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,\n",
+    "        TanYam7, Vern6];\n",
+    "    profiles = profile_forward_gradients(solvers, derivative, burnsolution, params); # Running the solvers \n",
+    "\n",
+    "    write_csv(\"\", profiles);    # Writing the data to a CSV\n",
+    "    saplot = speed_vs_accuracy_plot(\"gradient_profiles.csv\"); # constructing the plot object\n",
+    "    display(saplot)\n",
+    "end\n",
+    "\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an attempt at the general profile function that I wish to use. I also need to improve the write csv function since at the moment it really sucs balls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "So this is highly experimental basically I am passing a function into the profile function along with its args as an argument. f must take solvers as the first positional argument\n",
+    "\"\"\"\n",
+    "function profile(solvers::Vector, f::Function, args::Vector)::DataFrame\n",
+    "    local C14 = Matrix{Float64}(undef, length(solvers), 31);    # Creating the storage Matrix \n",
+    "    local t_mean = Vector{Float64}(undef, length(solvers));     # For the mean of the times\n",
+    "    local t_var = Vector{Float64}(undef, length(solvers));      # For the time varience \n",
+    "    local results = DataFrame(solver = @.string(solvers));      # DataFrame of summary Statistics\n",
+    "\n",
+    "    for (index, solver) in enumerate(solvers)           # Looping over the solvers \n",
+    "        local time_sample = Vector{Float64}(undef, 10); # A vector to hold the different run times of each trial \n",
+    "        for i in 1:10\n",
+    "            local timer = time();                       # Starting a timer\n",
+    "            solution = f(solver());  # Running the solver\n",
+    "            time_sample[i] = time() - timer;            # ending the timer \n",
+    "\n",
+    "            if i == 10                          # Storing final run\n",
+    "                C14[index, 1:end] = solution;   # filling C14\n",
+    "            end\n",
+    "        end\n",
+    "        t_mean[index] = mean(time_sample[2:end]);   # Storing run time ignoring compile run.\n",
+    "        t_var[index] = var(time_sample[2:end]);     # Storing time error\n",
+    "    end \n",
+    "\n",
+    "    C14 = (C14' .- median(C14, dims=1)')';   # Calculating deviations from median \n",
+    "    C14 = @.abs(C14);   # Absolute value \n",
+    "    results.accuracy = vec(mean(C14, dims=2));      # Calculating the mean of the deviation from the median \n",
+    "    results.accuracy_var = vec(var(C14, dims=2));   # Calculating the RMSE error << is better \n",
+    "    results.time_mean = t_mean;                     # Storing the mean run time\n",
+    "    results.time_var = t_var;                       # Storing the varience of the time sample \n",
+    "    return results\n",
+    "end"
    ]
   }
  ],
